--- a/crm.html
+++ b/crm.html
@@ -1,190 +1,168 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8" />
-<title>Life Q&A Trainer</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<style>
-body{
-  margin:0;
-  font-family:Inter, system-ui, Arial;
-  background:#0f172a;
-  color:#e5e7eb;
+import React from 'react';
+import { MeetingMinutes } from '../types';
+
+interface MinutesDisplayProps {
+  minutes: MeetingMinutes;
 }
 
-/* Header */
-header{
-  position:sticky;
-  top:0;
-  background:#020617;
-  padding:16px;
-  text-align:center;
-  font-size:18px;
-  font-weight:600;
-  border-bottom:1px solid #1e293b;
-  z-index:10;
-}
+const MinutesDisplay: React.FC<MinutesDisplayProps> = ({ minutes }) => {
+  const getSentimentColor = (sentiment?: string) => {
+    switch (sentiment) {
+      case 'Positive': return 'bg-green-100 text-green-800';
+      case 'Neutral': return 'bg-blue-100 text-blue-800';
+      case 'Mixed': return 'bg-yellow-100 text-yellow-800';
+      case 'Challenging': return 'bg-red-100 text-red-800';
+      default: return 'bg-slate-100 text-slate-800';
+    }
+  };
 
-/* Container */
-.container{
-  max-width:1400px;
-  margin:0 auto;
-  padding:20px;
-}
+  return (
+    <div className="space-y-8 animate-in fade-in slide-in-from-bottom-4 duration-700">
+      {/* Header Info */}
+      <div className="bg-white rounded-3xl p-8 shadow-sm border border-slate-100">
+        <div className="flex flex-col md:flex-row justify-between items-start md:items-center gap-4 mb-6">
+          <div>
+            <h1 className="text-3xl font-bold text-slate-900 leading-tight">{minutes.title}</h1>
+            <div className="flex flex-wrap gap-4 mt-3 text-slate-500">
+              <span className="flex items-center gap-1.5 text-sm font-medium">
+                <svg className="w-4 h-4 text-indigo-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"/></svg>
+                {minutes.date || new Date().toLocaleDateString()}
+              </span>
+              <span className="flex items-center gap-1.5 text-sm font-medium">
+                <svg className="w-4 h-4 text-indigo-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"/></svg>
+                {minutes.duration || 'N/A'}
+              </span>
+              {minutes.sentiment && (
+                <span className={`px-3 py-1 rounded-full text-xs font-bold uppercase tracking-wider ${getSentimentColor(minutes.sentiment)}`}>
+                  {minutes.sentiment} Tone
+                </span>
+              )}
+            </div>
+          </div>
+          <button 
+            onClick={() => window.print()}
+            className="flex-shrink-0 px-5 py-2.5 bg-white border border-slate-200 rounded-xl text-slate-600 hover:bg-slate-50 hover:border-slate-300 transition-all flex items-center gap-2 shadow-sm"
+          >
+            <svg className="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" d="M17 17h2a2 2 0 002-2v-4a2 2 0 00-2-2H5a2 2 0 00-2 2v4a2 2 0 002 2h2m2 4h6a2 2 0 002-2v-4a2 2 0 00-2-2H9a2 2 0 00-2 2v4a2 2 0 002 2zm8-12V5a2 2 0 00-2-2H9a2 2 0 00-2 2v4h10z"/></svg>
+            <span className="font-semibold">Export PDF</span>
+          </button>
+        </div>
 
-/* Grid */
-.scrollGrid{
-  display:grid;
-  grid-template-columns:repeat(4, 1fr);
-  gap:18px;
-  height:calc(100vh - 90px);
-  overflow:hidden;
-}
+        <div className="grid md:grid-cols-3 gap-8 pt-6 border-t border-slate-50">
+          <div className="md:col-span-1">
+            <h2 className="text-xs font-bold uppercase tracking-[0.15em] text-slate-400 mb-4">Attendees</h2>
+            <div className="flex flex-wrap gap-2">
+              {minutes.attendees && minutes.attendees.length > 0 ? (
+                minutes.attendees.map((a, i) => (
+                  <span key={i} className="px-3 py-1.5 bg-indigo-50/50 rounded-lg text-indigo-700 text-xs font-semibold border border-indigo-100/50">{a}</span>
+                ))
+              ) : (
+                <span className="text-slate-400 italic text-sm">No attendees identified</span>
+              )}
+            </div>
+          </div>
+          <div className="md:col-span-2">
+            <h2 className="text-xs font-bold uppercase tracking-[0.15em] text-slate-400 mb-4">Executive Summary</h2>
+            <p className="text-slate-600 leading-relaxed text-lg font-medium italic">"{minutes.summary}"</p>
+          </div>
+        </div>
+      </div>
 
-/* Scrollable columns */
-.column{
-  overflow-y:auto;
-  padding-right:6px;
-}
+      <div className="grid lg:grid-cols-3 gap-8">
+        {/* Detailed Key Points & Decisions */}
+        <div className="lg:col-span-2 space-y-8">
+          <section className="bg-white rounded-3xl p-8 shadow-sm border border-slate-100">
+            <h2 className="text-2xl font-bold text-slate-900 mb-8 flex items-center gap-3">
+              <div className="w-10 h-10 rounded-xl bg-indigo-600 text-white flex items-center justify-center shadow-lg shadow-indigo-100">
+                <svg className="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2"/></svg>
+              </div>
+              Detailed Discussion Points
+            </h2>
+            <div className="space-y-8">
+              {minutes.keyPoints.map((point, i) => (
+                <div key={i} className="group flex gap-6 items-start relative pb-8 border-b border-slate-50 last:border-0 last:pb-0">
+                  <span className="flex-shrink-0 w-10 h-10 rounded-2xl bg-slate-50 text-slate-400 flex items-center justify-center text-sm font-bold border border-slate-100 group-hover:bg-indigo-50 group-hover:text-indigo-600 group-hover:border-indigo-100 transition-colors">
+                    {String(i + 1).padStart(2, '0')}
+                  </span>
+                  <div className="space-y-2">
+                    <p className="text-slate-700 leading-relaxed text-base font-medium">
+                      {point}
+                    </p>
+                  </div>
+                </div>
+              ))}
+            </div>
+          </section>
 
-/* Question card */
-.question{
-  background:#020617;
-  padding:12px 14px;
-  border-radius:10px;
-  font-size:14px;
-  line-height:1.45;
-  margin-bottom:10px;
-  border-left:3px solid #38bdf8;
-  cursor:pointer;
-  transition:background .2s, transform .1s;
-}
+          <section className="bg-slate-900 rounded-3xl p-8 shadow-xl text-white overflow-hidden relative">
+            <div className="absolute top-0 right-0 w-32 h-32 bg-indigo-500/10 rounded-full blur-3xl -mr-16 -mt-16"></div>
+            <h2 className="text-xl font-bold mb-6 flex items-center gap-3 relative z-10">
+              <div className="w-8 h-8 rounded-lg bg-indigo-500 text-white flex items-center justify-center">
+                <svg className="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" d="M5 13l4 4L19 7"/></svg>
+              </div>
+              Formal Decisions
+            </h2>
+            <ul className="grid gap-4 relative z-10">
+              {minutes.decisions && minutes.decisions.length > 0 ? (
+                minutes.decisions.map((decision, i) => (
+                  <li key={i} className="flex items-start gap-4 bg-white/5 border border-white/10 p-5 rounded-2xl backdrop-blur-sm">
+                    <div className="mt-2 w-1.5 h-1.5 rounded-full bg-indigo-400 flex-shrink-0 shadow-[0_0_8px_rgba(129,140,248,0.8)]"></div>
+                    <p className="font-medium text-slate-100 leading-relaxed">{decision}</p>
+                  </li>
+                ))
+              ) : (
+                <p className="italic text-slate-400">No specific decisions were reached during this session.</p>
+              )}
+            </ul>
+          </section>
+        </div>
 
-.question:hover{
-  background:#020617dd;
-  transform:translateY(-1px);
-}
+        {/* Sidebar: Action Items */}
+        <div className="space-y-8">
+          <section className="bg-white rounded-3xl p-8 shadow-sm border border-slate-100 sticky top-24">
+            <h2 className="text-xl font-bold text-slate-900 mb-6 flex items-center gap-3">
+              <div className="w-9 h-9 rounded-xl bg-emerald-100 text-emerald-600 flex items-center justify-center">
+                <svg className="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"/></svg>
+              </div>
+              Next Actions
+            </h2>
+            <div className="space-y-4">
+              {minutes.actionItems.map((item, i) => (
+                <div key={i} className="p-5 rounded-2xl bg-slate-50/50 border border-slate-100 group hover:border-emerald-300 hover:bg-white transition-all duration-300 shadow-sm hover:shadow-md">
+                  <div className="flex items-start gap-3 mb-3">
+                    <div className="mt-1 flex-shrink-0 w-5 h-5 rounded-md border-2 border-slate-300 group-hover:border-emerald-500 transition-colors"></div>
+                    <p className="text-slate-800 font-bold leading-tight group-hover:text-emerald-700 transition-colors">{item.task}</p>
+                  </div>
+                  <div className="grid grid-cols-2 gap-2 text-xs font-bold uppercase tracking-wider text-slate-400">
+                    <div className="flex flex-col gap-1">
+                      <span className="text-[10px] text-slate-300">Owner</span>
+                      <span className="text-slate-600 truncate">{item.assignee || 'Unassigned'}</span>
+                    </div>
+                    <div className="flex flex-col gap-1">
+                      <span className="text-[10px] text-slate-300">Deadline</span>
+                      <span className="text-slate-600">{item.deadline || 'TBD'}</span>
+                    </div>
+                  </div>
+                </div>
+              ))}
+            </div>
 
-/* Active speaking */
-.question.active{
-  border-left-color:#22c55e;
-  background:#022c22;
-}
+            {minutes.nextMeeting && (
+              <div className="mt-8 p-6 bg-gradient-to-br from-indigo-600 to-violet-700 rounded-2xl text-white shadow-lg shadow-indigo-100">
+                <p className="text-[10px] uppercase tracking-widest text-indigo-100 font-black mb-1 opacity-80">Follow-up Session</p>
+                <p className="font-bold text-lg leading-tight">{minutes.nextMeeting}</p>
+                <div className="mt-4 flex items-center gap-2 text-xs font-semibold text-indigo-100/80">
+                  <svg className="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"/></svg>
+                  Sync with Calendar
+                </div>
+              </div>
+            )}
+          </section>
+        </div>
+      </div>
+    </div>
+  );
+};
 
-/* Responsive */
-@media(max-width:1200px){
-  .scrollGrid{ grid-template-columns:repeat(2,1fr); }
-}
-@media(max-width:700px){
-  .scrollGrid{ grid-template-columns:1fr; }
-}
-</style>
-</head>
-
-<body>
-
-<header>Life Question & Answer Trainer</header>
-
-<div class="container">
-  <div class="scrollGrid" id="questionGrid"></div>
-</div>
-
-<script>
-/* ================= 100 FIXED Q&A ================= */
-
-const QA = [
-{ q:"How do I think clearly when overwhelmed?", a:"Pause, reduce inputs, and focus on one small solvable step." },
-{ q:"How do I make better decisions?", a:"Compare options calmly and choose the one you can commit to without regret." },
-{ q:"How do I stay focused?", a:"Remove distractions and work in short, intentional time blocks." },
-{ q:"How do I stop procrastinating?", a:"Begin with the smallest possible action instead of waiting for motivation." },
-{ q:"How do I manage time better?", a:"Plan your day in advance and protect high priority time." },
-
-{ q:"How do I stay calm under pressure?", a:"Slow your breathing and respond thoughtfully rather than reacting." },
-{ q:"How do I handle stress?", a:"Focus on what you control and release what you cannot." },
-{ q:"How do I deal with anxiety?", a:"Ground yourself in the present moment and breathe steadily." },
-{ q:"How do I deal with self doubt?", a:"Rely on evidence of progress instead of imagined failure." },
-{ q:"How do I build confidence?", a:"Take small consistent actions that reinforce self trust." },
-
-{ q:"How do I speak clearly?", a:"Slow down, articulate each point, and pause when needed." },
-{ q:"How do I speak confidently?", a:"Trust your message and give it space to be heard." },
-{ q:"How do I communicate better?", a:"Be clear about intent and listen before responding." },
-{ q:"How do I listen better?", a:"Give full attention and avoid planning your reply." },
-{ q:"How do I explain things simply?", a:"State the core idea first and add details only if needed." },
-
-{ q:"How do I set goals?", a:"Choose goals that are challenging yet achievable." },
-{ q:"How do I stay consistent?", a:"Focus on showing up regularly rather than being perfect." },
-{ q:"How do I build discipline?", a:"Create routines that reduce the need for motivation." },
-{ q:"How do I stay motivated?", a:"Reconnect actions to a meaningful purpose." },
-{ q:"How do I measure progress?", a:"Track small improvements over time." },
-
-{ q:"How do I learn faster?", a:"Practice actively and apply learning immediately." },
-{ q:"How do I improve daily?", a:"Make one small improvement every day." },
-{ q:"How do I handle failure?", a:"Treat failure as feedback and adjust your approach." },
-{ q:"How do I recover from mistakes?", a:"Acknowledge them, correct course, and move forward." },
-{ q:"How do I grow as a person?", a:"Reflect often and act intentionally." },
-
-{ q:"How do I handle uncertainty?", a:"Accept uncertainty and focus on controllable actions." },
-{ q:"How do I make peace with uncertainty?", a:"Let go of outcomes and commit to effort." },
-{ q:"How do I trust myself?", a:"Honor past commitments you kept." },
-{ q:"How do I trust decisions?", a:"Make the best choice with available information and move forward." },
-{ q:"How do I stay present?", a:"Bring attention back to what you are doing right now." }
-];
-
-// Duplicate to reach 100 cleanly
-while(QA.length < 100){
-  QA.push({...QA[QA.length % 30]});
-}
-
-/* ================= VOICE ================= */
-
-function speak(text){
-  speechSynthesis.cancel();
-  const u = new SpeechSynthesisUtterance(text);
-  u.rate = 1.3;
-  speechSynthesis.speak(u);
-}
-
-/* ================= RENDER ================= */
-
-const grid = document.getElementById("questionGrid");
-
-function getColumnCount(){
-  if(window.innerWidth >= 1200) return 4;
-  if(window.innerWidth >= 700) return 2;
-  return 1;
-}
-
-function render(){
-  grid.innerHTML = "";
-  const cols = getColumnCount();
-  const columns = [];
-
-  for(let i=0;i<cols;i++){
-    const c = document.createElement("div");
-    c.className = "column";
-    columns.push(c);
-    grid.appendChild(c);
-  }
-
-  QA.forEach((item, i)=>{
-    const q = document.createElement("div");
-    q.className = "question";
-    q.textContent = item.q;
-
-    q.onclick = ()=>{
-      document.querySelectorAll(".question").forEach(el=>el.classList.remove("active"));
-      q.classList.add("active");
-      speak(item.a);
-    };
-
-    columns[i % cols].appendChild(q);
-  });
-}
-
-render();
-window.addEventListener("resize", render);
-</script>
-
-</body>
-</html>
+export default MinutesDisplay;
